--- a/MyChatApp/MVVM/View/LoginWindow.xaml
+++ b/MyChatApp/MVVM/View/LoginWindow.xaml
@@ -14,8 +14,7 @@
         <Window.DataContext>
             <viewmodel:MainViewModel/>
         </Window.DataContext>
-    <Viewbox Width="200"
-             Height="300">
+    <Viewbox Margin="10">
         <Grid Width="200"
       Height= "230"
               Background="Transparent"
@@ -34,8 +33,7 @@
                 <TextBlock
                 Text="Username"
                 HorizontalAlignment="Center"
-                VerticalAlignment="Center" Foreground="White" FontWeight="Bold" FontSize="16"
-                />
+                VerticalAlignment="Center" Foreground="White" FontWeight="Bold" FontSize="16"/>
                 <TextBox Grid.Column="1"
                      Height="20"
                      Width="90"
