--- a/MyChatApp/Themes/EllipseButton.xaml
+++ b/MyChatApp/Themes/EllipseButton.xaml
@@ -1,14 +1,15 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+    
     <ControlTemplate TargetType="Button" x:Key="EllipseButton">
         <Grid>
-            <Ellipse Height="100"
-                     Width="100">
-                <Ellipse.Fill>
-                    <ImageBrush x:Name="PreviewPicture" ImageSource="{Binding ProfilePicture}"/>
-                </Ellipse.Fill>
-            </Ellipse>
+            <Image Source="{Binding ProfilePicture}">
+                <Image.OpacityMask>
+                    <ImageBrush ImageSource="C:\Users\dylan\source\repos\MyChatApp\MyChatApp\Icons\black-circle.png"
+                                Stretch="Fill" />
+                </Image.OpacityMask>
+            </Image>
         </Grid>
     </ControlTemplate>
     
