--- a/MyChatApp/Themes/StylishScrollbar.xaml
+++ b/MyChatApp/Themes/StylishScrollbar.xaml
@@ -1,7 +1,10 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}"
+                     Color="Transparent" />
     <!--Scrollbar Thumbs-->
-    <Style x:Key="ScrollThumbs" TargetType="{x:Type Thumb}">
+    <Style x:Key="ScrollThumbs"
+           TargetType="{x:Type Thumb}">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Thumb}">
@@ -20,7 +23,8 @@
         </Setter>
     </Style>
     <!--ScrollBars-->
-    <Style x:Key="{x:Type ScrollBar}" TargetType="{x:Type ScrollBar}">
+    <Style x:Key="{x:Type ScrollBar}"
+           TargetType="{x:Type ScrollBar}">
         <Setter Property="Stylus.IsFlicksEnabled" Value="false" />
         <Setter Property="Foreground" Value="#8C8C8C" />
         <Setter Property="Background" Value="Transparent" />
@@ -45,31 +49,53 @@
                         </Track>
                     </Grid>
                     <ControlTemplate.Triggers>
-                        <Trigger SourceName="Thumb" Property="IsMouseOver" Value="true">
-                            <Setter Value="{DynamicResource ButtonSelectBrush}" TargetName="Thumb" Property="Background" />
+                        <Trigger SourceName="Thumb"
+                                 Property="IsMouseOver"
+                                 Value="true">
+                            <Setter Value="{DynamicResource ButtonSelectBrush}"
+                                    TargetName="Thumb"
+                                    Property="Background" />
                         </Trigger>
-                        <Trigger SourceName="Thumb" Property="IsDragging" Value="true">
-                            <Setter Value="{DynamicResource DarkBrush}" TargetName="Thumb" Property="Background" />
+                        <Trigger SourceName="Thumb"
+                                 Property="IsDragging"
+                                 Value="true">
+                            <Setter Value="{DynamicResource DarkBrush}"
+                                    TargetName="Thumb"
+                                    Property="Background" />
                         </Trigger>
-                        <Trigger Property="IsEnabled" Value="false">
-                            <Setter TargetName="Thumb" Property="Visibility" Value="Collapsed" />
+                        <Trigger Property="IsEnabled"
+                                 Value="false">
+                            <Setter TargetName="Thumb"
+                                    Property="Visibility"
+                                    Value="Collapsed" />
                         </Trigger>
-                        <Trigger Property="Orientation" Value="Horizontal">
-                            <Setter TargetName="GridRoot" Property="LayoutTransform">
+                        <Trigger Property="Orientation"
+                                 Value="Horizontal">
+                            <Setter TargetName="GridRoot"
+                                    Property="LayoutTransform">
                                 <Setter.Value>
                                     <RotateTransform Angle="-90" />
                                 </Setter.Value>
                             </Setter>
-                            <Setter TargetName="PART_Track" Property="LayoutTransform">
+                            <Setter TargetName="PART_Track"
+                                    Property="LayoutTransform">
                                 <Setter.Value>
                                     <RotateTransform Angle="-90" />
                                 </Setter.Value>
                             </Setter>
-                            <Setter Property="Width" Value="Auto" />
-                            <Setter Property="Height" Value="8" />
-                            <Setter TargetName="Thumb" Property="Tag" Value="Horizontal" />
-                            <Setter TargetName="PageDown" Property="Command" Value="ScrollBar.PageLeftCommand" />
-                            <Setter TargetName="PageUp" Property="Command" Value="ScrollBar.PageRightCommand" />
+                            <Setter Property="Width"
+                                    Value="Auto" />
+                            <Setter Property="Height"
+                                    Value="8" />
+                            <Setter TargetName="Thumb"
+                                    Property="Tag"
+                                    Value="Horizontal" />
+                            <Setter TargetName="PageDown"
+                                    Property="Command"
+                                    Value="ScrollBar.PageLeftCommand" />
+                            <Setter TargetName="PageUp"
+                                    Property="Command"
+                                    Value="ScrollBar.PageRightCommand" />
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
