--- a/MyChatApp/MVVM/View/MainWindow.xaml
+++ b/MyChatApp/MVVM/View/MainWindow.xaml
@@ -1,4 +1,5 @@
-﻿<Window x:Class="MyChatApp.MainWindow"
+﻿   
+<Window x:Class="MyChatApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -26,11 +27,43 @@
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
 
-        <Frame x:Name="LoginFrame"
-               Grid.ColumnSpan="2"
-               Grid.RowSpan="3" />
+        <Popup Placement="Center"
+               IsOpen="False"
+               x:Name="ServerShutdownPop">
+            <Canvas                     Width="300"
+                                        Height="200">
+            <Border BorderThickness="15"
+                    BorderBrush="#4b6043"
+                    Width="300"
+                    Height="200"
+                    Background="#87ab69"
+                    MouseDown="pop_MouseMove">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="100" />
+                        <RowDefinition />
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
+                    <TextBlock Text="The server you are connected to has been shutdown."
+                               Foreground="Red"
+                               FontSize="15"
+                               FontWeight="SemiBold"
+                               TextWrapping="Wrap"
+                               Grid.Row="0" />
+                    <Button Content="Back to login window."
+                            Background="Transparent"
+                            Grid.Row="1"
+                            Click="ButtonBackToLoginWindow_Click" />
+                    <Button Content="Close application."
+                            Click="ButtonClose_Click"
+                            Background="Transparent"
+                            Grid.Row="2" />
 
+                </Grid>
+            </Border>
+            </Canvas>
 
+        </Popup>
         <Border Grid.Column="1"
                 Grid.ColumnSpan="1"
                 MouseDown="Border_MouseDown"
@@ -107,7 +140,7 @@
                              Width="30"
                              Margin="10">
                         <Ellipse.Fill>
-                            <ImageBrush ImageSource="{Binding ProfilePicture}" />
+                            <ImageBrush ImageSource="{Binding ProfilePictureSource}" />
                         </Ellipse.Fill>
                     </Ellipse>
                     <StackPanel VerticalAlignment="Center">
