--- a/MyChatApp/MVVM/View/LoginWindow.xaml
+++ b/MyChatApp/MVVM/View/LoginWindow.xaml
@@ -11,11 +11,16 @@
         Width="500"
         Height="300"
         xmlns:theme="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2">
+    
+
+    <Window.DataContext>
+        <viewmodel:LoginViewModel />
+    </Window.DataContext>
     <Window.Resources>
         <ControlTemplate TargetType="Button"
                          x:Key="EllipseButton">
             <Grid>
-                <Image Source="/ProfilePictures/DefaultProfilePicture.png">
+                <Image Source="{Binding ProfilePictureSource}">
                     <Image.OpacityMask>
                         <ImageBrush ImageSource="/Icons/black-circle.png"
                                     Stretch="Uniform" />
@@ -589,10 +594,6 @@
         </Style>
 
     </Window.Resources>
-
-    <Window.DataContext>
-        <viewmodel:LoginViewModel />
-    </Window.DataContext>
 
     <Viewbox Margin="10">
 
