--- a/MyChatApp/Themes/ChatItem.xaml
+++ b/MyChatApp/Themes/ChatItem.xaml
@@ -1,56 +1,80 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:my ="clr-namespace:MyChatApp">
     <Style TargetType="ListViewItem" x:Key="ChatItem">
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate>
-                    <StackPanel Orientation="Horizontal">
-                        <Ellipse Width="30" Height="30"
-                                 Margin="10,0,0,-5">
-                            <Ellipse.Fill>
-                                <ImageBrush ImageSource="{Binding ImageSource}"
-                                            RenderOptions.BitmapScalingMode="Fant"/>
-                            </Ellipse.Fill>
-                        </Ellipse>
+        <Style.Resources>
+            <ControlTemplate x:Key ="TextMessage">
+                <StackPanel Orientation="Horizontal">
+                    <Ellipse Width="30"
+                             Height="30"
+                             Margin="10,0,0,-5">
+                        <Ellipse.Fill>
+                            <ImageBrush ImageSource="{Binding ImageSource}"
+                                        RenderOptions.BitmapScalingMode="Fant" />
+                        </Ellipse.Fill>
+                    </Ellipse>
 
-                        <StackPanel>
-                            <StackPanel Orientation="Horizontal">
-                                <Label Content="{Binding Username}"
+                    <StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <Label Content="{Binding Username}"
                                    Foreground="{Binding UsernameColor}"
                                    VerticalAlignment="Center"
-                                   Margin="0,0,-5,0"/>
-                                <Label Content="{Binding Time}"
+                                   Margin="0,0,-5,0" />
+                            <Label Content="{Binding Time}"
                                    Foreground="#44474d"
                                    FontSize="8"
-                                   VerticalAlignment="Center"/>
-                            </StackPanel>
-
-                            <Label Content="{Binding Message}"
-                                   Foreground="White"
-                                   VerticalAlignment="Center"/>
-
+                                   VerticalAlignment="Center" />
                         </StackPanel>
+
+                        <Label x:Name="MessageLabel"
+                               Content="{Binding Content}"
+                               Foreground="White"
+                               VerticalAlignment="Center" />
+
                     </StackPanel>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-        <Style.Resources>
-            <ControlTemplate x:Key="CustomRow">
-                <StackPanel Orientation="Horizontal">
-                    <Label Content="{Binding Message}"
-                           Foreground="White"
-                           Margin="40,-2,0,-2"/>
                 </StackPanel>
-                
+            </ControlTemplate>
+            <ControlTemplate x:Key="ImageMessage">
+                <StackPanel Orientation="Horizontal">
+                    <Ellipse Width="30"
+                             Height="30"
+                             Margin="10,0,0,-5">
+                        <Ellipse.Fill>
+                            <ImageBrush ImageSource="{Binding ImageSource}"
+                                        RenderOptions.BitmapScalingMode="Fant" />
+                        </Ellipse.Fill>
+                    </Ellipse>
+
+                    <StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <Label Content="{Binding Username}"
+                                   Foreground="{Binding UsernameColor}"
+                                   VerticalAlignment="Center"
+                                   Margin="0,0,-5,0" />
+                            <Label Content="{Binding Time}"
+                                   Foreground="#44474d"
+                                   FontSize="8"
+                                   VerticalAlignment="Center" />
+                        </StackPanel>
+
+                        <Image Source="Content"
+                               VerticalAlignment="Center" />
+
+                    </StackPanel>
+                </StackPanel>
             </ControlTemplate>
         </Style.Resources>
 
         <Style.Triggers>
 
-            <DataTrigger Binding="{Binding FirstMessage}" Value="False">
-
-                <Setter Property="Template" Value="{StaticResource CustomRow}"/>
-
+            <DataTrigger Binding="{Binding Type}" Value="{x:Static my:SendableObjectType.TextMessage}">
+                <Setter Property="Template"
+                        Value="{StaticResource TextMessage}" />
+            </DataTrigger>
+            <DataTrigger Binding="{Binding Type}"
+                         Value="{x:Static my:SendableObjectType.Picture}">
+                <Setter Property="Template"
+                        Value="{StaticResource ImageMessage}" />
             </DataTrigger>
         </Style.Triggers>
         
