--- a/MyChatApp/Themes/ChatItem.xaml
+++ b/MyChatApp/Themes/ChatItem.xaml
@@ -9,7 +9,7 @@
                              Height="30"
                              Margin="10,0,0,-5">
                         <Ellipse.Fill>
-                            <ImageBrush ImageSource="{Binding ImageSource}"
+                            <ImageBrush ImageSource="{Binding ProfilePictureImageSource}"
                                         RenderOptions.BitmapScalingMode="Fant" />
                         </Ellipse.Fill>
                     </Ellipse>
@@ -40,7 +40,7 @@
                              Height="30"
                              Margin="10,0,0,-5">
                         <Ellipse.Fill>
-                            <ImageBrush ImageSource="{Binding ImageSource}"
+                            <ImageBrush ImageSource="{Binding ProfilePictureImageSource}"
                                         RenderOptions.BitmapScalingMode="Fant" />
                         </Ellipse.Fill>
                     </Ellipse>
